  Changelog for the c-ares project

* December 22

- Daniel Stenberg added ares_getsock() that extracts the set of sockets to
  wait for action on. Similar to ares_fds() but not restricted to using
  select() for the waiting.

* November 25

- Yang Tse fixed some send() / recv() compiler warnings

* September 18

- Added constants that will be used by ares_getaddrinfo

- Made ares_getnameinfo use the reentrant getservbyport (getservbyport_r) if it is
  available to ensure it works properly in a threaded environment.

* September 10

- configure fix for detecting a member in the sockaddr_in6 struct which failed
  on ipv6-enabled HP-UX 11.00

Version 1.3.0 (August 29, 2004)

* August 21

- Alfredo Tupone provided a fix for the Windows code in get_iphlpapi_dns_info()
  when getting the DNS server etc.

* June 19

- Added some checks for the addrinfo structure.

* June 2

- William Ahern:

  Make UDP sockets non-blocking. I've confirmed that at least on Linux 2.4 a
  read event can come back from poll() on a valid SOCK_DGRAM socket but
  recv(2) will still block. This patch doesn't ignore EAGAIN in
  read_udp_packets(), though maybe it should. (This patch was edited by Daniel
  Stenberg and a new configure test was added (imported from curl's configure)
  to properly detect what non-blocking socket approach to use.)

  I'm not quite sure how this was happening, but I've been seeing PTR queries
  which seem to return empty responses. At least, they were empty when calling
  ares_expand_name() on the record. Here's a patch which guarantees to
  NUL-terminate the expanded name. The old behavior failed to NUL-terminate if
  len was 0, and this was causing strlen() to run past the end of the buffer
  after calling ares_expand_name() and getting ARES_SUCCESS as the return
  value. If q is not greater than *s then it's equal and *s is always
  allocated with at least one byte.

* May 16

- Added ares_getnameinfo which mimics the getnameinfo API (another feature